# django_dicom

./: .coverage  .coveragerc  .flake8  .gitignore  .sourcery.yaml  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  setup.py
.circleci/: config.yml
.github/workflows/: tests.yml
dicomdj/: __init__.py  admin.py  apps.py  signals.py  urls.py  views.py
dicomdj/migrations/: 0001_initial.py
dicomdj/models/: __init__.py  instance.py  patient.py  series.py  study.py
dicomdj/tests/: factories.py  test_forms.py  test_models.py  test_views.py
django_dicom/: __init__.py  admin.py  apps.py  forms.py  signals.py  tasks.py  template.gls  urls.py  utils.py  views.py
django_dicom/controllers/: import_image.py  local_import.py
django_dicom/data_import/: __init__.py  import_image.py  local_import.py
django_dicom/exceptions/: __init__.py  dicom_import_error.py
django_dicom/filters/: __init__.py  image_filter.py  patient_filter.py  series_filter.py  storage_scp_filter.py  storage_scu_filter.py  study_filter.py  utils.py
django_dicom/interfaces/: dcm2niix.py
django_dicom/migrations/: 0001_initial.py  0002_auto_20181217_1312.py  0002_auto_20190324_1650.py  0002_auto_20190419_0849.py  0002_auto_20190422_1333.py  0002_auto_20190429_0332.py  0002_auto_20200114_0734.py  0002_auto_20200609_0547.py  0002_auto_20201018_1638.py  (+87 more)
docs/: modules.rst
requirements/: common.txt  dev.txt
tests/: __init__.py  factories.py  fixtures.py  test_forms.py  test_models_bak.py  test_settings.py  test_views.py  urls.py  utils.py
(+180 files in other folders)
