[tool.poetry]
name = "django_dicom"
version = "0.1.0"
description = "A Django app to manage DICOM data"

license = "MIT"

authors = [
    "Zvi Baratz <z.baratz@gmail.com>"
]

readme = 'README.md'

repository = "https://github.com/ZviBaratz/django_dicom"
# homepage = "https://github.com/sdispater/poetry"

keywords = ['DICOM', 'django', 'MRI']

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.9"
pydicom = "^1.2"
numpy = "^1.16"
django_extensions = "^2.1"
tqdm = "^4.31"
django-environ = "^0.4.5"
django-extensions = "^2.1"
django = "^2.2"
psycopg2-binary = "^2.8"
coverage = "^4.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"
ipython = "^7.4"
black = {version = "*", allows-prereleases = true}
flake8 = "^3.7"
sphinx = "^2.0"
faker = "^1.0"
factory-boy = "^2.11"
